# jinja2-validator

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  run-tests.yml
jinja2-validator/: exceptions.py  validator.py
jinja2-validator/tests/: conftest.py  test_validator.py
jinja2-validator/tests/templates/: invalid.j2  valid.j2
