[project]
name = "jinja2-validator"
version = "0.1.0"
description = "A library to validate Jinja2 templates."
authors = [
    {name = "Your Name", email = "youremail@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "jinja2>=3.0",
    "pytest>=7.4.4",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
