[project]
name = "jinja2-validator"
version = "0.1.1"
description = "A library to validate Jinja2 templates."
authors = [
    {name = "AIT", email = "armin.schreger@ait.ac.at"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "jinja2>=3.0",
]
requires-python = ">=3.7"

[project.urls]
"Source Code" = "https://github.com/taranis-ai/jinja2-validator"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
